<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShowActivity">
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/show_links"
        android:icon="@mipmap/links"
        android:orderInCategory="100"
        android:title="@string/show_links"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_labels"
        android:icon="@mipmap/labels"
        android:orderInCategory="100"
        android:title="@string/show_labels"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/add_item"-->
<!--        android:icon="@mipmap/add_item"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/add_item"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/information"
        android:icon="@mipmap/information"
        android:orderInCategory="100"
        android:title="@string/information"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@mipmap/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
