<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/collect_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/collect_info_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/link"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/collect_info_label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/must_input"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/collect_info_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_input"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/collect_info_label_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_input"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_collect_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/collect_dialog_confirm"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_collect_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>