<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/push_pager_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/push_title_recommend"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/recommend"
                android:text="@string/push_title_art"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/art"
                android:text="@string/push_title_science"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/science"
                android:text="@string/push_title_computer"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/healthy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/computer"
                android:text="@string/push_title_healthy"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/economics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/healthy"
                android:text="@string/push_title_economics"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/economics"
                android:text="@string/push_title_life"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/life"
                android:text="@string/push_title_game"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/game"
                android:text="@string/push_title_eat"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/eat"
                android:text="@string/push_title_tour"
                android:textColor="@color/colorPushTitleTextColor"
                android:textSize="19sp" />
        </RelativeLayout>
    </HorizontalScrollView>

    <ImageView
        android:contentDescription="@string/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_push_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>