<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collect_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collect_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/collect_info_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/link"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/collect_info_label_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/must_input"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/collect_info_label_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/self_input"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/collect_info_label_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/self_input"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_collect_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circle_shape_button"
            android:text="@string/collect"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_collect_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_shape_button"
            android:text="@string/cancel"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>