<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/show_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/show_toolbar"
        style="@style/Toolbar.MyStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        app:title="@string/tb_local_title"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white" />

    <FrameLayout
        android:id="@+id/show_choose_love_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/show_toolbar"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/show_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/show_toolbar">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/show_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom_table" />

        <LinearLayout
            android:id="@+id/ll_bottom_table"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBottomTableBackground"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/table_me"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bottom_table_1"
                android:textColor="@color/colorBottomTableTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/table_push"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bottom_table_2"
                android:textColor="@color/colorBottomTableTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/table_service"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bottom_table_3"
                android:textColor="@color/colorBottomTableTextColor"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>